updated cv again

--- a/content/aniketcv.html
+++ b/content/aniketcv.html
@@ -307,7 +307,7 @@
                     <div class="info">
                         <ul>
                             <li>
-                                Headed the development and maintenance of 3 major open source projects:
+                                Headed the development and maintenance of 3 major open source Node.js projects:
                                 <ul>
                                     <li>Newman - Postman CLI with 100K+ downloads each month</li>
                                     <li>Postman Runtime - Underlying engine which powers Postman App and Cloud
@@ -321,18 +321,18 @@
                             </li>
                             <li>
                                 Overhauled the specification of the Postman Collection format,
-                                which can be used for HTTP API definitions
+                                which can be used for HTTP API definitions, similar to OpenAPI/Swagger or RAML
                             </li>
                             <li>
                                 Worked on multiple user facing, high-traffic services such as postman-echo.com,
-                                and the update server for Postman's app updates
+                                and the update server for Postman's app updates, using Node.js
                             </li>
                             <li>
                                 Engineered a multi-layered secure sandbox for executing user provided Javascript code
                             </li>
                             <li>
-                                Architected a domain hosting system and an SNI based reverse proxy, allowing users to
-                                host their domains in the Postman Cloud
+                                Architected a Node.js based domain hosting system and an SNI based reverse proxy,
+                                allowing users to host their domains in the Postman Cloud
                             </li>
                         </ul>
                     </div>
@@ -350,12 +350,12 @@
                         <ul>
                             <li>
                                 Executed the launch of Amazon External Payments in Japan, setting up the deployment
-                                stacks, deployment pipelines, etc.
+                                stacks, pipelines and API services
                             </li>
                             <li>Overhauled a notification service, allowing it to handle 4 times more traffic</li>
-                            <li>Worked on various operational improvements such as better logging, monitoring, etc</li>
-                            <li>Implemented a parser and a reverse parser to convert config files to and from
-                                JSON, for easy manipulation and validation.
+                            <li>Worked on various operational improvements such as better logging, monitoring and deployments</li>
+                            <li>Implemented a parser and a reverse parser to convert large config files in a proprietary
+                                format to and from JSON, for easy manipulation and validation
                             </li>
                         </ul>
                     </div>
