updated the cv yo

--- a/content/aniketcv.html
+++ b/content/aniketcv.html
@@ -371,10 +371,10 @@
                     <div class="clear"> </div>
                     <div class="info">
                         <ul>
-                            <li>Created a web based platform from scratch for streamlined, automated testing of a network based software system.</li>
-                            <li>Came up with a system of recording and replaying HTTP(s) traffic.</li>
-                            <li>Implemented features to automate component deployment, testing, and aggregation of test results.</li>
-                            <li>Created a system to forward command line logs to the web-ui, in real time.</li>
+                            <li>Created a web based platform from scratch for streamlined, automated testing of a network based software system</li>
+                            <li>Came up with a system of recording and replaying HTTP(s) traffic</li>
+                            <li>Implemented features to automate component deployment, testing, and aggregation of test results</li>
+                            <li>Created a system to forward command line logs to the web-ui, in real time</li>
                         </ul>
                     </div>
                     <div class="clear"> </div>
@@ -393,8 +393,8 @@
                                 sessions (honeytokens) and honeypot servers to lure attackers</li>
                             <li>Implemented protocols such as FTP, SMTP, HTTP and VNC on the honeypot</li>
                             <li>Created automated intelligent clients capable of simulating human actions</li>
-                            <li>Designed a bootable image generation system, facilitating seamless deployment on servers and clients.</li>
-                            <li>Implemented parts of a web based interface to manage deployment of the honeypot clients and servers.</li>
+                            <li>Designed a bootable image generation system, facilitating seamless deployment on servers and clients</li>
+                            <li>Implemented parts of a web based interface to manage deployment of the honeypot clients and servers</li>
                         </ul>
                     </div>
                     <div class="clear"> </div>
@@ -416,7 +416,7 @@
                         <ul>
                             <li>
                             <span>
-                                Devised and implemented an algorithm for parking space allocation, upon on a stationary Ethernet network.
+                                Devised and implemented an algorithm for parking space allocation, upon a stationary Ethernet network
                             </span>
                             </li>
                         </ul>
