--- a/content/aniketcv.html
+++ b/content/aniketcv.html
@@ -317,7 +317,7 @@
                                 </ul>
                             </li>
                             <li>
-                                Coached a team of three, guiding them through technical and non-technical issues
+                                Mentored a team of three, guiding them through technical and non-technical issues
                             </li>
                             <li>
                                 Overhauled the specification of the Postman Collection format,
@@ -352,7 +352,7 @@
                                 Executed the launch of Amazon External Payments in Japan, setting up the deployment
                                 stacks, pipelines and API services
                             </li>
-                            <li>Overhauled a notification service, allowing it to handle 4 times more traffic</li>
+                            <li>Overhauled a notification service, scaling it to handle 4 times more traffic</li>
                             <li>Worked on various operational improvements such as better logging, monitoring and deployments</li>
                             <li>Implemented a parser and a reverse parser to convert large config files in a proprietary
                                 format to and from JSON, for easy manipulation and validation
