updated the resume

--- a/content/aniketcv.html
+++ b/content/aniketcv.html
@@ -298,6 +298,31 @@
             <h2 class="title">Work experience</h2>
             <div class="set">
                 <div class="item">
+                    <h3 class="company_info"><span class="company">Instagram</span>
+                        <span class="job_title">Software Engineer Intern (Graduate)</span>
+                        <span class="date r">Jun 2018 &mdash; Aug 2018</span>
+                        <span class="job_location r">Menlo Park, CA</span>
+                    </h3>
+                    <div class="clear"> </div>
+                    <div class="info">
+                        <ul>
+                            <li>
+                                Improved the CPU efficiency of compute heavy services in Instagram
+                                Notifications
+                            </li>
+                            <li>Architected a service to aggregate and serve time data from various sources,
+                            such as request logs, which is used in the notification pipeline</li>
+                            <li>Updated existing services to serve dates in the user locale, instead of just English
+                            </li>
+                            <li>
+                                <i>Technologies: Python, Thrift, Django</i>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="clear"> </div>
+                </div>
+
+                <div class="item">
                     <h3 class="company_info"><span class="company">Postman</span>
                         <span class="job_title">Software Engineer</span>
                         <span class="date r">Jun 2015 &mdash; Jul 2017</span>
@@ -317,7 +342,7 @@
                                 </ul>
                             </li>
                             <li>
-                                Mentored a team of three, guiding them through technical and non-technical issues
+                                Coached a team of three, guiding them through technical and non-technical issues
                             </li>
                             <li>
                                 Overhauled the specification of the Postman Collection format,
@@ -333,6 +358,9 @@
                             <li>
                                 Architected a Node.js based domain hosting system and an SNI based reverse proxy,
                                 allowing users to host their domains in the Postman Cloud
+                            </li>
+                            <li>
+                                Technologies: <i>JavaScript (Node.js, Electron, Chromium), SailsJS, AWS</i>
                             </li>
                         </ul>
                     </div>
@@ -352,29 +380,14 @@
                                 Executed the launch of Amazon External Payments in Japan, setting up the deployment
                                 stacks, pipelines and API services
                             </li>
-                            <li>Overhauled a notification service, scaling it to handle 4 times more traffic</li>
+                            <li>Overhauled a notification service, allowing it to handle 4 times more traffic</li>
                             <li>Worked on various operational improvements such as better logging, monitoring and deployments</li>
                             <li>Implemented a parser and a reverse parser to convert large config files in a proprietary
                                 format to and from JSON, for easy manipulation and validation
                             </li>
-                        </ul>
-                    </div>
-                    <div class="clear"> </div>
-                </div>
-
-                <div class="item">
-                    <h3 class="company_info"><span class="company">Netskope</span>
-                        <span class="job_title">Software Engineering Intern</span>
-                        <span class="date r">Jul 2013 &mdash; Jul 2014</span>
-                        <span class="job_location r">Bangalore, India</span>
-                    </h3>
-                    <div class="clear"> </div>
-                    <div class="info">
-                        <ul>
-                            <li>Created a web based platform from scratch for streamlined, automated testing of a network based software system</li>
-                            <li>Came up with a system of recording and replaying HTTP(s) traffic</li>
-                            <li>Implemented features to automate component deployment, testing, and aggregation of test results</li>
-                            <li>Created a system to forward command line logs to the web-ui, in real time</li>
+                            <li>
+                                <i>Technologies: Java (+AspectJ), Python, Javacript, AWS</i>
+                            </li>
                         </ul>
                     </div>
                     <div class="clear"> </div>
@@ -395,6 +408,9 @@
                             <li>Created automated intelligent clients capable of simulating human actions</li>
                             <li>Designed a bootable image generation system, facilitating seamless deployment on servers and clients</li>
                             <li>Implemented parts of a web based interface to manage deployment of the honeypot clients and servers</li>
+                            <li>
+                                <i>Technologies: Python</i>
+                            </li>
                         </ul>
                     </div>
                     <div class="clear"> </div>
