--- a/content/aniketcv.html
+++ b/content/aniketcv.html
@@ -299,19 +299,23 @@
             <div class="set">
                 <div class="item">
                     <h3 class="company_info"><span class="company">Instagram</span>
-                        <span class="job_title">Software Engineer Intern (Graduate)</span>
-                        <span class="date r">Jun 2018 &mdash; Aug 2018</span>
+                        <span class="job_title">Software Engineer</span>
+                        <span class="date r">Mar 2019 &mdash; Present</span>
                         <span class="job_location r">Menlo Park, CA</span>
                     </h3>
                     <div class="clear"> </div>
                     <div class="info">
                         <ul>
+                            <li>Tech-Lead for Instagram's Web Efficiency team, driving the roadmap, and leading various data-center efficiency
+			    initiatives.</li>
                             <li>
-                                Improved the CPU efficiency of compute heavy services in Instagram
-                                Notifications
+				Worked on Cinder, Meta's internal version of Python. Specifically, built various compiler optimizations
+				which delivered 5% CPU usage improvements for Instagram.
                             </li>
-                            <li>Architected a service to aggregate and serve time data from various sources,
-                            such as request logs, which is used in the notification pipeline</li>
+			    <li>
+                                Worked on making Instagram's core web server asynchronous, delivering major capacity savings 
+				($X millions) and latency improvements.
+                            </li>
                             <li>Updated existing services to serve dates in the user locale, instead of just English
                             </li>
                             <li>
