--- a/content/aniketcv.html
+++ b/content/aniketcv.html
@@ -279,7 +279,7 @@
                         <span class="date r">May 2019</span>
                     </h3>
                     <div class="clear"> </div>
-                    <span class="course l">Master of Science in Computer Science - Incoming student</span>
+                    <span class="course l">Master of Science in Computer Science</span>
                 </div>
                 <div class="item">
                     <h3>
